--- a/index.css
+++ b/index.css
@@ -1,25 +1,33 @@
 .carousel-inner {
     position: relative;
     width: 100%;
-    height: 80vh;
+    height: 70vh;
     overflow: hidden;
+}
+.navbar{
+  margin-bottom: 0px}
+}
+.carousel-inner > .item > img, .carousel-inner > .item > a > img {
+    line-height: 1;
+    height: 70vh;
 }
 .img-responsive, .thumbnail > img, .thumbnail a > img, .carousel-inner > .item > img, .carousel-inner > .item > a > img {
     display: block;
       width: 100%;
     max-width: 100%;
-    height: 80vh;
+    height: 70vh;
 }
 .foot{
   height: 20vh;
 
 }
 .slide{
-  height: 80vh;
+  height: 70vh;
     width: 100%;
     /* position: relative; */
 
 }
+
 .carousel-indicators {
     position: absolute;
     bottom: 10px;
@@ -51,6 +59,25 @@
     margin: 1px;
     background-color: brown;
 }
+.navbar-default {
+    background-color: transparent;
+    border-color: transparent;
+}
+.nav > li {
+    position: relative;
+    display: block;
+    padding-right: 50px;
+}
+.navbar-nav{
+  margin-left: auto;
+    margin-right: auto;
+    left: 35%;
+    position: relative;
+}
+.navbar-default .navbar-nav > li > a {
+    color: #777;
+    font-size: 1.5em;
+}
 .logo{
   float:right;margin-right:10px; margin-left:20px; width: 8%
 }
@@ -58,4 +85,14 @@
 .logo{
   float:right;margin-right:10px; margin-left:20px; width: 100%;
   }
+}
+@media (max-width: 768px){
+.navbar-nav {
+  margin-left: auto;
+    margin-right: auto;
+  left:0px;
+    width: 100%;
+
+    position: relative;
+}
 }
