--- a/index.css
+++ b/index.css
@@ -1,13 +1,13 @@
-.carousel-inner {
+/*.carousel-inner {
     position: relative;
     width: 100%;
     height: 70vh;
     overflow: hidden;
-}
+}*/
 .navbar{
   margin-bottom: 0px}
 }
-.carousel-inner > .item > img, .carousel-inner > .item > a > img {
+/*.carousel-inner > .item > img, .carousel-inner > .item > a > img {
     line-height: 1;
     height: 70vh;
 }
@@ -16,18 +16,60 @@
       width: 100%;
     max-width: 100%;
     height: 70vh;
-}
-.foot{
+}*/
+/*.foot{
   height: 20vh;
 
-}
-.slide{
+}*/
+/*.slide{
   height: 70vh;
     width: 100%;
-    /* position: relative; */
+    /* position: relative;
 
+}*/
+
+
+.navbar-default {
+    background-color: transparent;
+    border-color: transparent;
 }
+.nav > li {
+    position: relative;
+    display: block;
+    padding-right: 20px;
+}
+.navbar-default {
+    background-color: white;
+  border-color:white;}
+.navbar-nav{
+  margin-left: auto;
+    margin-right: auto;
+    /*left: 20%;*/
+    position: relative;
+}
+.navbar-default .navbar-nav > li > a {
+    color: #777;
+    font-size: 1.5em;
+}
+.navbar-default .navbar-nav > li > a:hover {
+    color: #11c7c1;
+    font-size: 1.5em;
+}
+.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
+  color: #11c7c1;
+  background-color: White;;
+}
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
+    color: #11c7c1;
+    background-color: White;;
+}
+.logo{
+  float:right;margin-right:40px; margin-left:20px; width: 100%
+}
+.dropdown-menu {
 
+    background-color: rgba(255, 256, 255, 0.5);
+  }
 .carousel-indicators {
     position: absolute;
     bottom: 10px;
@@ -43,8 +85,8 @@
 }
 .carousel-indicators li {
     display: inline-block;
-    width: 15px;
-    height: 15px;
+    width: 20px;
+    height: 20px;
     margin: 1px;
     text-indent: -999px;
     cursor: pointer;
@@ -54,33 +96,95 @@
     border-radius: 2px;
 }
 .carousel-indicators .active {
-  width: 15px;
-  height: 15px;
+  width: 20px;
+  height: 20px;
     margin: 1px;
     background-color: brown;
 }
-.navbar-default {
-    background-color: transparent;
-    border-color: transparent;
+.footer{
+  background: #e6e6e6;
+height: auto;
+color: #9e7d5c;
 }
-.nav > li {
-    position: relative;
-    display: block;
-    padding-right: 50px;
+.h3-how{
+  color:white;
+  text-shadow: 2px 2px grey;
+  font-size:2.4em;
 }
-.navbar-nav{
-  margin-left: auto;
-    margin-right: auto;
-    left: 35%;
-    position: relative;
+.ul-how li a{
+  color:white;
+  text-shadow: 2px 2px grey;
+  text-decoration:none;
 }
-.navbar-default .navbar-nav > li > a {
-    color: #777;
-    font-size: 1.5em;
+.ul-how li{
+color:white;
+font-size:2em;
+text-shadow: 2px 2px grey;
 }
-.logo{
-  float:right;margin-right:10px; margin-left:20px; width: 8%
+
+.bottom-list li a{
+  color:#9e7d5c;
+  font-size:0.9em;
 }
+.create-project{
+  background-image: url("img/project-create1.png");
+  width:100%;
+  height:450px;
+}
+.create-project:hover{
+  background-image: url("img/project-create.png");
+  width:100%;
+  height:450px;
+}
+.past-project{
+  background-image: url("img/past-project1.png");
+  width:100%;
+  height:450px;
+}
+.past-project:hover{
+  background-image: url("img/apst-project.png");
+  width:100%;
+  height:450px;
+}
+.tagline{
+  text-align:right; text-transform:uppercase; position:relative; top:30%;margin-top: 20px;
+margin-right: 20px;
+}
+.new1{
+  background: url(img/new1.jpg) center top no-repeat;
+  width:100%;
+  height:400px;
+}
+.new1:hover{
+  background: url(img/new1-shadow.jpg) center top no-repeat;
+  width:100%;
+  height:400px;
+}
+.new2{
+  background: url(img/new2.jpg) center top no-repeat;
+  width:100%;
+  height:400px;
+}
+.new2:hover{
+  background: url(img/new2-shadow.jpg) center top no-repeat;
+  width:100%;
+  height:400px;
+}
+
+.new3{
+  background: url(img/new3.jpg) center top no-repeat;
+  width:100%;
+  height:400px;
+}
+.new3:hover{
+  background: url(img/new3-shadow.jpg) center top no-repeat;
+  width:100%;
+  height:400px;
+}
+
+
+
+
 @media (min-width: @screen-sm-min) {
 .logo{
   float:right;margin-right:10px; margin-left:20px; width: 100%;
@@ -95,4 +199,28 @@
 
     position: relative;
 }
+.logo{
+  float:right;margin-right:40px; margin-left:20px; width: 70%
+}
+.nav > li {
+    position: relative;
+    display: block;
+    padding-right: 0px;
+}
+.navbar-default .navbar-nav > li > a {
+    color: #777;
+    font-size: 1.2em;
+}
+
+}
+@media screen and (min-width: 1025px) {
+  .nav > li {
+      position: relative;
+      display: block;
+      padding-right: 55px;
+  }
+  .tagline{
+    text-align:right; text-transform:uppercase; position:relative; top:30%;margin-top: 50px;
+  margin-right: 20px;
+  }
 }
